@@ -1,5 +1,5 @@
 #if !defined(lint) && !defined(__INSIGHT__)
-static const char libbk__rcsid[] = "$Id: b_relay.c,v 1.26 2003/12/25 06:27:17 seth Exp $";
+static const char libbk__rcsid[] = "$Id: b_relay.c,v 1.27 2003/12/29 06:42:17 seth Exp $";
 static const char libbk__copyright[] = "Copyright (c) 2003";
 static const char libbk__contact[] = "<projectbaka@baka.org>";
 #endif /* not lint */
@@ -188,7 +188,7 @@ static void bk_relay_iohhandler(bk_s B, bk_vptr data[], void *opaque, struct bk_
     if (relay->br_callback)
     {
       bk_debug_printf_and(B,64,"Making relay callback\n");
-      (*relay->br_callback)(B, relay->br_opaque, ioh, ioh_other, data, 0);
+      (*relay->br_callback)(B, relay->br_opaque, ioh, ioh_other, newcopy, 0);
     }
 
     if ((ret = bk_ioh_write(B, ioh_other, newcopy, 0)) != 0)
